# mylib

./: CMakeLists.txt  README.md  conanfile.py
include/: CMakeLists.txt  mylib.h
src/: CMakeLists.txt  mylib.c
test_package/: CMakeLists.txt  conanfile.py  main.c
